# jestocke-skill-test

./: .pre-commit-config.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  tests.yml
booking/: admin.py  models.py
booking/migrations/: 0001_initial.py
jestocke_skill_test/: asgi.py  settings.py  urls.py  wsgi.py
market_place/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
market_place/fixtures/: sample.json
market_place/migrations/: 0001_initial.py  0002_alter_storagebox_options_storagebox_monthly_price.py
market_place/templates/base/: base.html  messages.html
market_place/templates/marketplace/: base.html  boxes_list.html  boxes_section.html  heading.html  main.html
market_place/tests/: test_availability.py
templates/admin/: date_filter.html  dropdown_filter.html  dropdown_filter_ul.html  owner_filter.html  storage_box_filter.html  tenant_filter.html
